Bug 92141 - spend too much time refcounting atoms.  Ported by jack.jia@sun.com.  a=jdunn@netscape.com